1.添加双车同屏界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -97,6 +97,8 @@
     <system:String x:Key="SystemEnd">系统末端</system:String>
     <system:String x:Key="ColdFanSpped1">#1冷却风扇转速</system:String>
     <system:String x:Key="ColdFanSpped2">#2冷却风扇转速</system:String>
+    <system:String x:Key="ColdFanSpped3">#1冷风扇转速</system:String>
+    <system:String x:Key="ColdFanSpped4">#2却风扇转速</system:String>
     <system:String x:Key="ExciterCurrent">励磁机励磁电流</system:String>
     <system:String x:Key="MainGeneratorExciterCurrent">主发电机励磁电流</system:String>
     <system:String x:Key="EarthLeakageCurrent">接地漏电流</system:String>
