--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -32,6 +32,8 @@
 
     <system:Double x:Key="Double30">30</system:Double>
 
+    <system:Double x:Key="Double24">24</system:Double>
+
     <system:Double x:Key="Double20">20</system:Double>
 
     <system:Double x:Key="Double18">18</system:Double>
