--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Converters/TurkmenistanConverter.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Converters/TurkmenistanConverter.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:constant="clr-namespace:Engine.TCMS.Turkmenistan.Constant"
     xmlns:converter="clr-namespace:MMI.Facility.WPFInfrastructure.Converter;assembly=MMI.Facility.WPFInfrastructure"
     xmlns:turkmenistan="clr-namespace:Engine.TCMS.Turkmenistan">
 
     <converter:MathConverter x:Key="MathConverter" />
-    <converter:EnumDescritionConverter x:Key="EnumDescritionConverter"></converter:EnumDescritionConverter>
-    <turkmenistan:TargetDistanceScalLengthToLineTicknessConverter x:Key="TargetDistanceScalLengthToLineTicknessConverter"></turkmenistan:TargetDistanceScalLengthToLineTicknessConverter>
-
+    <converter:EnumDescritionConverter x:Key="EnumDescritionConverter" />
+    <turkmenistan:TargetDistanceScalLengthToLineTicknessConverter x:Key="TargetDistanceScalLengthToLineTicknessConverter" />
 
 </ResourceDictionary>
