1.添加语言文件

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -128,4 +128,6 @@
     <system:String x:Key="DieselPressure2">机油压力：</system:String>
     <system:String x:Key="FuelPumpOutletPressure">燃油泵出口压力</system:String>
     <system:String x:Key="FuelSystemEndPressure">燃油系统末端压力</system:String>
+    <system:String x:Key="Original">本</system:String>
+    <system:String x:Key="Other">他</system:String>
 </ResourceDictionary>
