--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
@@ -58,6 +58,12 @@
         <Setter Property="Foreground" Value="{DynamicResource HarwareButtonWhiteBrush}" />
         <Setter Property="FontSize" Value="{DynamicResource Double24}" />
     </Style>
+    <Style x:Key="AXleTextStyle3" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{DynamicResource HarwareButtonWhiteBrush}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double20}" />
+    </Style>
     <Style x:Key="RunParamTextStyle2" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
