--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
@@ -7,11 +7,11 @@
         <Setter Property="FontFamily" Value="Times New Roman" />
     </Style>
 
-    <system:String x:Key="Date">日期</system:String>
-    <system:String x:Key="Time">时间</system:String>
-    <system:String x:Key="WorkState">工况</system:String>
-    <system:String x:Key="EngineSpeed">机车速度</system:String>
-    <system:String x:Key="DieselEngineSpeed">柴油机转速</system:String>
+    <system:String x:Key="Date">дата</system:String>
+    <system:String x:Key="Time">Время</system:String>
+    <system:String x:Key="WorkState">Режнм</system:String>
+    <system:String x:Key="EngineSpeed">Скор.т-За</system:String>
+    <system:String x:Key="DieselEngineSpeed">Скор.вр.кол.вала д.</system:String>
     <system:String x:Key="MasterVoltage" xml:space="preserve">主&#13;电压</system:String>
     <system:String x:Key="MasterCurrent" xml:space="preserve">主&#13;电流</system:String>
     <system:String x:Key="OilPressure" xml:space="preserve">滑油&#13;压力</system:String>
