--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/WPFApp/App.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/WPFApp/App.xaml
@@ -5,7 +5,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="../Resources/Text/StringResource-ch.xaml" />
+                <ResourceDictionary Source="../Resources/Text/StringResource-tm.xaml" />
+                <ResourceDictionary Source="../Resources/Styles/TurkmenistanTextStyles-tm.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="../Resources/Styles/TurkmenistanButtonStyle-tm.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="../Resources/Styles/TurkmenistanItemControlStyle-tm.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="../Resources/Styles/TurkmenistanProgressBarStyle-tm.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="../Resources/TurkmenistanResource.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
