--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -2,11 +2,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
-
-    <Style TargetType="Control">
-        <Setter Property="FontFamily" Value="宋体" />
-    </Style>
-
     <system:String x:Key="Date">日期</system:String>
     <system:String x:Key="Time">时间</system:String>
     <system:String x:Key="WorkState">工况</system:String>
@@ -20,6 +15,7 @@
     <system:String x:Key="OILTEngineOilTemperature" xml:space="preserve">机油&#13;温度</system:String>
     <system:String x:Key="FaultInfo" xml:space="preserve">故障&#13;信息</system:String>
     <system:String x:Key="AxleTemperature" xml:space="preserve">轴 &#13;&#13;温</system:String>
+    <system:String x:Key="AxleBitTemperature">轴位温度℃</system:String>
     <system:String x:Key="Axial" xml:space="preserve">轴位</system:String>
     <system:String x:Key="Temperature">温度℃</system:String>
     <system:String x:Key="AxleTemperaturInfoWindow">轴 温 信 息 窗 口</system:String>
