--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/AxleTemperature/RecontionAxleView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/AxleTemperature/RecontionAxleView.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class="Engine.TCMS.Turkmenistan.View.Contents.AxleTemperature.CurrentAxleView"
+﻿<UserControl x:Class="Engine.TCMS.Turkmenistan.View.Contents.AxleTemperature.RecontionAxleView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Engine.TCMS.Turkmenistan.View.Contents.AxleTemperature"
              mc:Ignorable="d" 
+             xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
              d:DesignHeight="120" d:DesignWidth="530">
     <Grid>
         <Border Style="{DynamicResource MainBorderStyle}">
@@ -76,7 +77,6 @@
                             <TextBlock Grid.Row="1" Grid.Column="1" Text="31" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
                             <TextBlock Grid.Row="2" Grid.Column="1" Text="44" Foreground="White" FontSize="{DynamicResource Double12}" HorizontalAlignment="Left"></TextBlock>
                         </Grid>
-                     
                     </Border>
                     <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="{DynamicResource AxleBitTemperature}" Style="{DynamicResource MainTextStyle6}"></TextBlock>
                 </Grid>
