--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/CutSerchView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/CutSerchView.xaml
@@ -63,9 +63,9 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Style="{DynamicResource CutSerchViewTextStyle3}" Text="主发功率基准："></TextBlock>
+            <TextBlock Style="{DynamicResource CutSerchViewTextStyle3}" Text="{DynamicResource PrimaryPowerBase}"></TextBlock>
             <TextBlock Grid.Column="1"  HorizontalAlignment="Center" Style="{DynamicResource CutSerchViewTextStyle3}" Text="0 kw"></TextBlock>
-            <TextBlock Grid.Column="2" Style="{DynamicResource CutSerchViewTextStyle3}" Text="主手柄位置："></TextBlock>
+            <TextBlock Grid.Column="2" Style="{DynamicResource CutSerchViewTextStyle3}" Text="{DynamicResource MainHandlePosition}"></TextBlock>
             <TextBlock Grid.Column="3"  HorizontalAlignment="Center" Style="{DynamicResource CutSerchViewTextStyle3}" Text="0 位"></TextBlock>
         </Grid>
         <Grid Grid.Row="17">
@@ -76,10 +76,10 @@
                 <ColumnDefinition Width="179*"></ColumnDefinition>
                 <ColumnDefinition Width="160*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Style="{DynamicResource CutSerchViewTextStyle3}" Text="牵引工况耗能："></TextBlock>
+            <TextBlock Grid.Column="0" Style="{DynamicResource CutSerchViewTextStyle3}" Text="{DynamicResource EnergyConsumptionInTactionCondition}"></TextBlock>
             <TextBlock Grid.Column="1" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="39099 kw.h"></TextBlock>
             <TextBlock Grid.Column="2" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="+24v"></TextBlock>
-            <TextBlock Grid.Column="3" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="电压："></TextBlock>
+            <TextBlock Grid.Column="3" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="{DynamicResource Voltage}"></TextBlock>
             <TextBlock Grid.Column="4" Margin="0,0,30,0" HorizontalAlignment="Center" Style="{DynamicResource CutSerchViewTextStyle3}" Text="22 V"></TextBlock>
         </Grid>
         <Grid Grid.Row="18">
@@ -90,10 +90,10 @@
                 <ColumnDefinition Width="179*"></ColumnDefinition>
                 <ColumnDefinition Width="160*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" Style="{DynamicResource CutSerchViewTextStyle3}" Text="电阻制动能耗："></TextBlock>
+            <TextBlock Grid.Column="0" Style="{DynamicResource CutSerchViewTextStyle3}" Text="{DynamicResource ResistanceBrakeEnergy}"></TextBlock>
             <TextBlock Grid.Column="1" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="0 kw.h"></TextBlock>
             <TextBlock Grid.Column="2" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="-24v"></TextBlock>
-            <TextBlock Grid.Column="3" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="电压："></TextBlock>
+            <TextBlock Grid.Column="3" HorizontalAlignment="Right" Style="{DynamicResource CutSerchViewTextStyle3}" Text="{DynamicResource Voltage}"></TextBlock>
             <TextBlock Grid.Column="4" Margin="0,0,30,0" HorizontalAlignment="Center" Style="{DynamicResource CutSerchViewTextStyle3}" Text="22 V"></TextBlock>
         </Grid>
         <Grid Grid.Row="3" Margin="0,0,100,0">
