--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/CurrentProgressbarView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/ProgressBar/CurrentProgressbarView.xaml
@@ -204,6 +204,7 @@
                         Text="{DynamicResource CurrentCar}" />
                     <TextBlock
                         Grid.Column="2"
+                        Grid.Row="0"
                         Style="{DynamicResource MainTextStyle5}"
                         Text="{DynamicResource DieselEngineSpeed1}" />
                     <TextBlock
