--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-tm.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
-    <system:String x:Key="Date">дата</system:String>
+    <system:String x:Key="Date">Дата</system:String>
     <system:String x:Key="Time">Время</system:String>
     <system:String x:Key="WorkState">Режнм</system:String>
     <system:String x:Key="EngineSpeed">Скор.т-За</system:String>
@@ -16,7 +16,7 @@
     <system:String x:Key="FaultInfo" xml:space="preserve">Аварня Инфор мацня</system:String>
     <system:String x:Key="AxleTemperature" xml:space="preserve">Т゜С  оси</system:String>
     <system:String x:Key="AxleBitTemperature">ПП.оси Т゜С</system:String>
-    <system:String x:Key="Axial" xml:space="preserve">轴位</system:String>
+    <system:String x:Key="Axial" xml:space="preserve">ОСИ N0</system:String>
     <system:String x:Key="Temperature">温度℃</system:String>
     <system:String x:Key="AxleTemperaturInfoWindow">Температура оси</system:String>
     <system:String x:Key="TemperaturUpInfoWindow">温 升 信 息 窗 口</system:String>
@@ -67,9 +67,9 @@
     <system:String x:Key="FuelPressureParamFormat" xml:space="preserve">Давленне М-горення</system:String>
     <system:String x:Key="CoolingWaterTemperatureParamFormat" xml:space="preserve">Т゜С охлводы</system:String>
     <system:String x:Key="OILTEngineOilTemperatureParamFormat" xml:space="preserve">Т゜С масла</system:String>
-    <system:String x:Key="PowerTemperatureParamFormat1" xml:space="preserve">功率环温1</system:String>
-    <system:String x:Key="PowerTemperatureParamFormat2" xml:space="preserve">功率环温2</system:String>
-    <system:String x:Key="BrakePressParamFormat" xml:space="preserve">制动风缸压力</system:String>
+    <system:String x:Key="PowerTemperatureParamFormat1" xml:space="preserve">Т゜С средыпрн сннж.мощ1</system:String>
+    <system:String x:Key="PowerTemperatureParamFormat2" xml:space="preserve">Т゜С средыпрн сннж.мощ2</system:String>
+    <system:String x:Key="BrakePressParamFormat" xml:space="preserve">Дав.тормрезервуара</system:String>
     <system:String x:Key="UnitKpa">kPa</system:String>
     <system:String x:Key="UnitCentigrade">℃</system:String>
     <system:String x:Key="UnitA">A</system:String>
